# prueba_bancolombia_cristianH

./: .gitignore  Prueba.md  README.md  pyproject.toml
resultados/: Solución_prueba.md
scripts/: eda.py  etl.py  feng.py  main.py  modelling.py  settings.py
