[project]
name = "prueba-bancolombia"
version = "0.1.0"
description = "Prueba para aspirar al cargo de científico de datos senior"
authors = [
    {name = "Cristian Hidalgo",email = "ccamilo.hidalgo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kaggle (>=1.6.17,<2.0.0)",
    "duckdb (>=1.2.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pyspark (>=3.5.5,<4.0.0)",
    "findspark (>=2.0.1,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
